--- a/hrms/entrar.html
+++ b/hrms/entrar.html
@@ -101,7 +101,10 @@
                   ><i class="fa fa-lock"></i>
                   <a href="#">Esqueceu a senha?</a></span
                 >
-                <span>Não tem uma conta? <a href="registrar.html">Registrar</a></span>
+                <span
+                  >Não tem uma conta?
+                  <a href="registrar.html">Registrar</a></span
+                >
                 <div v-if="verifica">
                   <div class="alert alert-danger" role="alert">
                     Usuário ou senha incorretos.
@@ -145,16 +148,21 @@
                       element.senha == this.senha
                     ) {
                       this.logado = true;
+                      sessionStorage.setItem("id", element.id);
+                      console.log(element);
                       if (element.tipo) {
                         //HOSPITAL
-                        sessionStorage.setItem("id", element.id);
                         aux = window.location.href;
                         aux = aux.replace("entrar.html", "dashboard.html?");
                         window.location.href = aux;
                       } else {
                         //PACIENTE
+
                         aux = window.location.href;
-                        aux = aux.replace("entrar.html", "dashboard.html");
+                        aux = aux.replace(
+                          "entrar.html",
+                          "consultas_paciente.html"
+                        );
                         window.location.href = aux;
                       }
                     }
