--- a/hrms/entrar.html
+++ b/hrms/entrar.html
@@ -9,11 +9,8 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
     />
-    <meta
-      name="description"
-      content="Oculux Bootstrap 4x admin is super flexible, powerful, clean &amp; modern responsive admin dashboard with unlimited possibilities."
-    />
-    <meta name="author" content="GetBootstrap, design by: puffintheme.com" />
+    <meta name="description" content="Entre e visualize informações hospitalares de forma rápida">
+    <meta name="author" content="Equipe Btree">
 
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <!-- VENDOR CSS -->
